# mcp-with-aws-agentcore

./: .gitignore
.github/workflows/: deploy-infra.yml  deploy-mcp.yml
place-finder-infra/: .gitignore  cdk.json  package-lock.json  package.json  tsconfig.json
place-finder-infra/lib/: types.ts
place-finder-infra/lib/lambda/oauth2-provider/: handler.py
place-finder-infra/lib/stacks/: agentcore-stack.ts  ecr-stack.ts  gateway-stack.ts  index.ts
place-finder-mcp/: .bedrock_agentcore.yaml  .env.example  .gitignore  Dockerfile  Makefile  agentcore.py  pyproject.toml
place-finder-mcp/src/: config.py  main.py
place-finder-mcp/src/clients/: agentcore_memory.py  agentcore_memory_client.py  google_places_client.py  google_weather.py  open_route_service_client.py
place-finder-mcp/src/infrastructure/: bedrock_prompt_manager.py  observability.py  trace_decorator.py
place-finder-mcp/src/prompts/: __init__.py  holiday_planner_agent_scope.py
place-finder-mcp/src/schemas/: places.py  preferences.py  routing.py  weather.py
place-finder-mcp/src/servers/: open_route_service_server.py  place_finder.py  place_finder_server.py  prompt_server.py  tool_registry.py  user_preferences.py  user_preferences_server.py  weather.py  weather_server.py
place-finder-mcp/src/utils/: formatters.py  memory_formatters.py  route_formatters.py  weather_formatters.py
