[project]
name = "place-finder-mcp"
version = "0.1.0"
description = "Place Finder MCP Server — powered by Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore",
    "fastmcp",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    # Observability
    "aws-opentelemetry-distro>=0.12.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
